--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My Proxy</title>
+  <style>
+    body { font-family: sans-serif; text-align: center; padding: 2em; background: #f5f5f5; }
+    input { padding: 0.5em; width: 300px; }
+    button { padding: 0.5em; }
+    footer { margin-top: 2em; font-size: 0.9em; color: gray; }
+  </style>
+</head>
+<body>
+  <h1>🚀 Welcome to My Proxy</h1>
+  <p>Enter a website to visit:</p>
+  <form action="/uv/service/hvtrs8%2F-wuw%2Cgmoelg.pw/" method="GET" onsubmit="event.preventDefault(); go();">
+    <input id="url" placeholder="https://example.com" />
+    <button type="submit">Go</button>
+  </form>
+
+  <footer>
+    <p>⚠️ This proxy is for educational purposes only.</p>
+    <p><strong>I am not responsible</strong> for what users access with this tool.</p>
+  </footer>
+
+  <script>
+    function go() {
+      const input = document.getElementById('url').value;
+      if (!input.startsWith("http")) {
+        alert("Please enter a full URL starting with http or https");
+        return;
+      }
+      const encoded = encodeURIComponent(input);
+      window.location.href = '/uv/service/' + encoded;
+    }
+  </script>
+</body>
+</html>
 
